cmake_minimum_required(VERSION 3.20)
project(NUMBERPLATE CXX)

set(EXE_NAME numberplate)

set(SRC_NUMBERPLATE_BOARD)
list(APPEND SRC_NUMBERPLATE_BOARD numberplate/Board/Board.cpp)
list(APPEND SRC_NUMBERPLATE_BOARD numberplate/Board/Get.cpp)
list(APPEND SRC_NUMBERPLATE_BOARD numberplate/Board/ProductSet.cpp)
list(APPEND SRC_NUMBERPLATE_BOARD numberplate/Board/Shuffle.cpp)

set(SRC_NUMBERPLATE_CURSOR)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/Cursor.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/GetInfo.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/GetInfoColumn.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/GetInfoRow.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/GetInfoValid.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/MoveDown.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/MoveLeft.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/MoveRight.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/MoveUp.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/Set.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/SetColumn.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/SetRow.cpp)
list(APPEND SRC_NUMBERPLATE_CURSOR numberplate/Cursor/SetValid.cpp)

set(SRC_NUMBERPLATE_IDENTIFIER)
list(APPEND SRC_NUMBERPLATE_IDENTIFIER numberplate/Identifier/Identifier.cpp)
list(APPEND SRC_NUMBERPLATE_IDENTIFIER numberplate/Identifier/operator.cpp)

set(SRC_NUMBERPLATE_KEYBOARD)
list(APPEND SRC_NUMBERPLATE_KEYBOARD numberplate/Keyboard/Get.cpp)

set(SRC_NUMBERPLATE_MANAGERIDENTIFIER)
list(APPEND SRC_NUMBERPLATE_MANAGERIDENTIFIER numberplate/ManagerIdentifier/Erase.cpp)
list(APPEND SRC_NUMBERPLATE_MANAGERIDENTIFIER numberplate/ManagerIdentifier/GetID.cpp)
list(APPEND SRC_NUMBERPLATE_MANAGERIDENTIFIER numberplate/ManagerIdentifier/ManagerIdentifier.cpp)

set(SRC_NUMBERPLATE_NUMBER)
list(APPEND SRC_NUMBERPLATE_NUMBER numberplate/Number/GetKind.cpp)
list(APPEND SRC_NUMBERPLATE_NUMBER numberplate/Number/Number.cpp)

set(SRC_NUMBERPLATE_SQUARE)
list(APPEND SRC_NUMBERPLATE_SQUARE numberplate/Square/GetAnswer.cpp)
list(APPEND SRC_NUMBERPLATE_SQUARE numberplate/Square/GetCorrect.cpp)
list(APPEND SRC_NUMBERPLATE_SQUARE numberplate/Square/GetID.cpp)
list(APPEND SRC_NUMBERPLATE_SQUARE numberplate/Square/Square.cpp)

set(SRC_NUMBERPLATE)
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_BOARD})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_CURSOR})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_IDENTIFIER})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_KEYBOARD})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_MANAGERIDENTIFIER})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_NUMBER})
list(APPEND SRC_NUMBERPLATE ${SRC_NUMBERPLATE_SQUARE})
list(APPEND SRC_NUMBERPLATE numberplate/DisplayBoard.cpp)
list(APPEND SRC_NUMBERPLATE numberplate/DisplayCorrectBoard.cpp)

set(SRC)
list(APPEND SRC ${SRC_NUMBERPLATE})
list(APPEND SRC main.cpp)

add_executable(${EXE_NAME} ${SRC})
target_include_directories(${EXE_NAME} PUBLIC ../include)