cmake_minimum_required(VERSION 3.20)
project(NUMBERPLACE CXX)

set(EXE_NAME numberplate)

set(SRC_NUMBERPLACE_BOARD)
list(APPEND SRC_NUMBERPLACE_BOARD numberplace/Board/Board.cpp)
list(APPEND SRC_NUMBERPLACE_BOARD numberplace/Board/Get.cpp)
list(APPEND SRC_NUMBERPLACE_BOARD numberplace/Board/ProductSet.cpp)
list(APPEND SRC_NUMBERPLACE_BOARD numberplace/Board/Shuffle.cpp)

set(SRC_NUMBERPLACE_CURSOR)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/Cursor.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/GetInfo.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/GetInfoColumn.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/GetInfoRow.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/GetInfoValid.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/MoveDown.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/MoveLeft.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/MoveRight.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/MoveUp.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/Set.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/SetColumn.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/SetRow.cpp)
list(APPEND SRC_NUMBERPLACE_CURSOR numberplace/Cursor/SetValid.cpp)

set(SRC_NUMBERPLACE_IDENTIFIER)
list(APPEND SRC_NUMBERPLACE_IDENTIFIER numberplace/Identifier/Identifier.cpp)
list(APPEND SRC_NUMBERPLACE_IDENTIFIER numberplace/Identifier/operator.cpp)

set(SRC_NUMBERPLACE_KEYBOARD)
list(APPEND SRC_NUMBERPLACE_KEYBOARD numberplace/Keyboard/Get.cpp)

set(SRC_NUMBERPLACE_MANAGERIDENTIFIER)
list(APPEND SRC_NUMBERPLACE_MANAGERIDENTIFIER numberplace/ManagerIdentifier/Erase.cpp)
list(APPEND SRC_NUMBERPLACE_MANAGERIDENTIFIER numberplace/ManagerIdentifier/GetID.cpp)
list(APPEND SRC_NUMBERPLACE_MANAGERIDENTIFIER numberplace/ManagerIdentifier/ManagerIdentifier.cpp)

set(SRC_NUMBERPLACE_NUMBER)
list(APPEND SRC_NUMBERPLACE_NUMBER numberplace/Number/GetKind.cpp)
list(APPEND SRC_NUMBERPLACE_NUMBER numberplace/Number/Number.cpp)

set(SRC_NUMBERPLACE_SQUARE)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/GetAnswer.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/GetCorrect.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/GetDisplay.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/GetID.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/GetQuestion.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/SetNumber.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/Square.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/SwitchingAnswer.cpp)
list(APPEND SRC_NUMBERPLACE_SQUARE numberplace/Square/SwitchingQuestion.cpp)

set(SRC_NUMBERPLACE)
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_BOARD})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_CURSOR})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_IDENTIFIER})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_KEYBOARD})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_MANAGERIDENTIFIER})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_NUMBER})
list(APPEND SRC_NUMBERPLACE ${SRC_NUMBERPLACE_SQUARE})
list(APPEND SRC_NUMBERPLACE numberplace/DisplayBoard.cpp)
list(APPEND SRC_NUMBERPLACE numberplace/DisplayCorrectBoard.cpp)

set(SRC)
list(APPEND SRC ${SRC_NUMBERPLACE})
list(APPEND SRC main.cpp)
list(APPEND SRC operator.cpp)

add_executable(${EXE_NAME} ${SRC})
target_include_directories(${EXE_NAME} PUBLIC ../include)